tetrapak-publicweb/ui.dev/src/source/templates/components/sectionMenu/_sectionMenu.scss
.section-menu-navigation-Link {
    .section-menu-item-link {
        &:hover {
            color: $color-jordy-blue;
        }
        &.active {
            font-weight: 900;
        }
        i.with-arrow {
            @include margin-left($margin-xs);
            vertical-align: top;
            &::before {
                font-size: $font-sm;
                line-height: $font-sm;
                transform: rotate(90deg);
            }
        }
        i.with-arrow.icon-up {
            &::before {
                transform: rotate(270deg);
            }
        }
    }
}

